--- a/practice/test/test-data-driver/index.html
+++ b/practice/test/test-data-driver/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app">
-      {{message1}}
+      <!-- {{message}} -->
     </div>
     <!-- built files will be auto injected -->
   </body>
